<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>franka_python</name>
  <version>0.0.0</version>

  <description>
    ROS 2 Python package for Franka Cartesian control
    and monocular visual servoing.
  </description>

  <maintainer email="harry@todo.todo">
    harry
  </maintainer>

  <license>Apache-2.0</license>

  <!-- Python ROS 2 package build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS 2 node dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Launch file dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <!-- Included by visual_servo.launch.py -->
  <exec_depend>franka_velocity_ctrl</exec_depend>

  <!-- Python image-processing dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>